--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard index.js test/index.js",
-    "test": "node test/index.js && npm run lint"
+    "test": "jest",
+    "typecheck": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,11 @@
     "url": "https://github.com/jarofghosts/dotpather/issues"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
     "standard": "^5.4.1",
-    "tape": "^4.4.0"
+    "tape": "^4.4.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
